Refactored Metadata REST API
Merged Metadata REST API into connection to have the same /connection base path.
