# be/src/main/java/com/ataccama/dbadger/controller/DBConnectionController.java
@@ -1,6 +1,7 @@
 package com.ataccama.dbadger.controller;
 
 import com.ataccama.dbadger.domain.DBConnection;
+import com.ataccama.dbadger.domain.DBSchema;
 import com.ataccama.dbadger.service.connection.DBConnectionService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
@@ -14,27 +15,27 @@ import java.util.List;
 
 @RestController
 @CrossOrigin(origins = "http://localhost")
-@RequestMapping(path = "/connection", produces = {MediaType.APPLICATION_JSON_VALUE})
+@RequestMapping(path = "/connections", produces = {MediaType.APPLICATION_JSON_VALUE})
 public class DBConnectionController {
 
-    private final DBConnectionService service;
+    private final DBConnectionService connectionService;
 
-    @Value("classpath:swagger/connection.yaml")
+    @Value("classpath:swagger/api-docs.yaml")
     Resource swagger;
 
     @Autowired
-    public DBConnectionController(DBConnectionService service) {
-        this.service = service;
+    public DBConnectionController(DBConnectionService connectionService) {
+        this.connectionService = connectionService;
     }
 
     @GetMapping
-    public List<DBConnection> getAll() {
-       return service.findAll();
+    public List<DBConnection> getAllConnections() {
+       return connectionService.findAll();
     }
 
     @PostMapping
-    public void create(@RequestBody DBConnection connection) {
-        service.create(connection);
+    public void createConnection(@RequestBody DBConnection connection) {
+        connectionService.create(connection);
     }
 
     @GetMapping(path = "/docs")
